[package]
name = "base256"
description = "Encode and decode data in base 256"
license = "ISC"
documentation = "https://github.com/ctsrc/Base256/blob/master/README.md"
readme = "README.md"
repository = "https://github.com/ctsrc/Base256"
version = "0.3.0"
authors = ["Erik Nordstrøm <erik@nordstroem.no>"]
homepage = "https://ctsrc.github.io/Base256"
categories = ["command-line-utilities"]
edition = "2021"

[[bin]]
name = "lastresort"
path = "src/main.rs"

[dependencies]
anyhow = { version = "1.0", default-features = false, features = ["std"] }
clap = { version = "4.1", default-features = false, features = ["std", "derive", "help", "usage"] }
