[package]
name = "base256"
description = "Encode and decode data in base 256 easily typed words"
license = "ISC"
documentation = "https://github.com/ctsrc/Base256/blob/master/README.md"
readme = "README.md"
repository = "https://github.com/ctsrc/Base256"
version = "0.3.0"
authors = ["Erik Nordstrøm <erik@nordstroem.no>"]
homepage = "https://ctsrc.github.io/Base256"
categories = ["command-line-utilities"]
edition = "2021"

[features]
default = ["bin", "encode_pgp", "decode_pgp", "encode_eff", "decode_eff"]
bin = ["dep:clap", "dep:anyhow"]
encode = []
decode = []
encode_pgp = ["wl_pgp", "encode"]
decode_pgp = ["wl_pgp", "decode"]
encode_eff = ["wl_eff", "encode"]
decode_eff = ["wl_eff", "decode"]
wl_eff = []
wl_pgp = []

[lib]
path = "src/lib.rs"

[[bin]]
name = "lastresort"
path = "src/main.rs"
required-features = ["bin"]

[dependencies]
anyhow = { version = "1.0", default-features = false, features = ["std"], optional = true }
clap = { version = "4.1", default-features = false, features = ["std", "derive", "help", "usage", "error-context"], optional = true }

[dev-dependencies]
test-case = "2.2"
